# financial-fraud

./: .dockerignore  .gitignore  Dockerfile  README.md  artifacts.dvc  dvc.yaml  environment.yml  kind-config.yaml  main.py  pyproject.toml  requirements.txt  submission_checklist.md  workflow.yaml
.dvc/: config
argo/: workflow-template.yaml
config/: batch_prediction.yaml  data-validation.yaml  data_ingestion.yaml  feature-engineering.yaml  model_evaluation.yaml  model_training.yaml  schema.yaml
data/: .~lock.transactions.csv#
dockerfiles/: Dockerfile.template
docs/: feature_documentation.md  pipeline_architecture.md
experiments/: trial_01_data_ingestion.py
notebooks/: starter_template.ipynb  test_predictions.csv  test_predictions.json
notebooks/.ipynb_checkpoints/: starter_template-checkpoint.ipynb
src/components/: batch_prediction.py  data_ingestion.py  data_validation.py  feature_engineering.py  model_evaluation.py  model_training.py
src/config_manager/: batch_prediction.py  data_ingestion.py  data_validation.py  feature_engineering.py  model_evaluation.py  model_training.py
src/pipelines/: pip_01_data_ingestion.py  pip_02_data_validation.py  pip_03_feature_engineering.py  pip_04_model_training.py  pip_05_model_evaluation.py  pip_06_batch_prediction.py
src/scripts/: evaluate_model.py  export_model.py  feature_engineering.py  ingest_data.py  train_model.py  validate_data.py
src/utils/: commons.py  exception.py  logger.py
